# Math-2024-25-Winter

./: .gitignore  404.html  Colaboratory'ye_Hoş_Geldiniz.ipyn  Colaboratory'ye_Hoş_Geldiniz.ipynb  Example.ipynb  Homework_22.ipynb  README.md  assigment  conf_env.sh  convert.sh  index.html  mathematics c3  assignment  mkdocs.yml  pyproject.toml  search.html  setup.sh
Lecture_Notes/: Analitic_Geometry.html  Analitic_Geometry.qmd  Analytic_Geometry.html  Analytic_Geometry.qmd  Calculus.html  Calculus.qmd  Example_solutions.md  Exercise_list.html  Exercise_list.md  Exercises.html  Exercises.md  Linear_Algebra.html  Linear_Algebra.qmd  custom.scss  exercises  exercises 2  geogebra.html  geogebra.qmd  how_tu_build_cartesian_space.html  how_tu_build_cartesian_space.qmd  styles.css
Notebooks_EN/: readme.md
Notebooks_PL/: readme.md
Test_notebooks/: AG_ploting_coord_sys.ipynb  Co_to_jest_funkcja.ipynb  Co_to_jest_rownanie.ipynb  GA_Krzywe_i_powierzchnie.ipynb  GA_Proste.ipynb  Homework_1.ipynb  Homework_10.ipynb  Homework_11.ipynb  Homework_12.ipynb  Homework_13.ipynb  Homework_2.ipynb  Homework_3.ipynb  Homework_4.ipynb  Homework_5.ipynb  Homework_6.ipynb  Homework_7.ipynb  Homework_8.ipynb  Homework_9.ipynb  LA_Matrix_odwracania_gauss.ipynb  LA_Matrix_odwracanie_macierzy_metoda_gaussa.ipynb  LA_Matrix_operations.ipynb  LA_Matrix_podstawowe_operacje.ipynb  LA_Matrix_trojkatna.ipynb  LA_Matrix_wyznaczniki_01.ipynb  LA_Matrix_wyznaczniki_2x2_3x3.ipynb  LA_Matrix_wyznaczniki_Laplace.ipynb  LA_SoLE_Cramer.ipynb  LA_SoLE__operacje.ipynb  LA_SoLE_gauss.ipynb  LA_VecOp.ipynb  (+25 more)
(+219 files in other folders)
